hphp/test/quick/properties4.php.expectf
array(1) {
  ["w"]=>
  int(3)
}
Done
looking up NonExistentClass

Fatal error: Class undefined: NonExistentClass in %s on line 32
